# anymotion-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  codecov.yml  config.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml  github-pandoc.css  slack-message.json
.github/: dependabot.yml
anymotion_cli/: __init__.py  click_custom.py  config.py  core.py  exceptions.py  interactive.py  options.py  output.py  utils.py
anymotion_cli/click_custom/: __init__.py  core.py  decorators.py  didyoumean.py  formatting.py  global_help.py  help_colors.py  repl.py
anymotion_cli/commands/: analysis.py  analyze.py  compare.py  comparison.py  configure.py  download.py  draw.py  drawing.py  extract.py  image.py  interactive.py  keypoint.py  movie.py  upload.py
docs/: index.md
encore_api_cli/: __init__.py  cli.py  client.py  config.py  core.py  exceptions.py  options.py  output.py  settings.py  state.py  utils.py
encore_api_cli/commands/: analysis.py  analyze.py  configure.py  download.py  draw.py  drawing.py  extract.py  image.py  keypoint.py  movie.py  upload.py
encore_api_cli/sdk/: __init__.py  auth.py  client.py  exceptions.py  response.py  session.py
tests/integration/: conftest.py  test_cli.py  test_upload.py
tests/unit/: conftest.py  test_cli.py  test_client.py  test_config.py  test_core.py  test_output.py  test_settings.py  test_utils.py
tests/unit/click_custom/: test_didyoumean.py  test_repl.py
tests/unit/commands/: test_analysis.py  test_analyze.py  test_compare.py  test_comparison.py  test_configure.py  test_download.py  test_draw.py  test_drawing.py  test_extract.py  test_image.py  test_interactive.py  test_keypoint.py  test_movie.py  test_upload.py
tests/unit/sdk/: test_client.py  test_response.py  test_session.py
