[tool.poetry]
name = "anymotion-cli"
version = "1.2.1"
description = "Command Line Interface for AnyMotion API"
authors = ["Yusuke Kumihashi <y_kumiha@nttpc.co.jp>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nttpc/anymotion-cli"
homepage = "https://github.com/nttpc/anymotion-cli"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
anymotion-sdk = "~1.2"
click = "^7.1.1"
importlib_metadata = { version = "^1.7", python = "<3.8" }
prompt-toolkit = "^3.0.7"
pygments = "^2.6.1"
requests = "^2.24.0"
tabulate = "^0.8.6"
yaspin = "^1.2"

[tool.poetry.dev-dependencies]
bandit = "^1.6"
black = "^20.8b1"
coverage = "^5.3"
flake8 = "^3.8"
flake8-bugbear = "^20.1"
flake8-docstrings = "^1.5"
isort = "^5.6"
mypy = "^0.790"
pytest = "^6.1"
pytest-cov = "^2.8"
pytest-mock = "^3.3"
pre-commit = "^2.8"
requests-mock = "^1.7"
tox = "^3.20"

[tool.poetry.scripts]
amcli = "anymotion_cli.core:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
