[tool.poetry]
name = "anymotion-cli"
version = "1.3.2"
description = "Command Line Interface for AnyMotion API"
authors = ["Yusuke Kumihashi <y_kumiha@nttpc.co.jp>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nttpc/anymotion-cli"
homepage = "https://github.com/nttpc/anymotion-cli"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
anymotion-sdk = ">=1.2.7"
click = ">=7.1,<8.0"
importlib_metadata = { version = ">=4.0,<5.0", python = "<3.8" }
prompt-toolkit = "^3.0.7"
pygments = "^2.6.1"
requests = "^2.25.0"
tabulate = "^0.8.6"
yaspin = "^1.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
black = "^20.8b1"
coverage = "^6.2"
flake8 = "^3.8"
flake8-bugbear = "^22.3"
flake8-docstrings = "^1.6"
isort = "^5.9"
mypy = "^0.941"
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-mock = "^3.6"
pre-commit = "^2.17"
requests-mock = "^1.9"
tox = "^3.24"
types-setuptools = "^57.4.11"
types-tabulate = "^0.8.6"
types-requests = "^2.27.14"

[tool.poetry.scripts]
amcli = "anymotion_cli.core:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
